--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Build site
       run: npm run build --prod
     - name: Deploy site to S3 bucket
-      run: aws s3 sync ./dist/ng-calculator/ s3://{{ secrets.AWS_S3_BUCKET_NAME }} --delete --acl public-read
+      run: aws s3 sync ./dist/ng-calculator/ s3://${{ secrets.AWS_S3_BUCKET_NAME }} --delete --acl public-read
     - name: Zip the build for the release
       run: cd dist/ng-calculator/ && zip -r ../../calculator-build-${{ github.run_number }}.zip ./* && ls
     - name: Create release
